# CppIFCDiceDemo

./: CMakeLists.txt  README
IfcParser/: CMakeLists.txt  main.cpp
IfcPlusPlus/: CMakeLists.txt  IfcPlusPlus.vcxproj  IfcPlusPlus.vcxproj.filters
IfcPlusPlus/src/ifcpp/geometry/: GeometrySettings.h
IfcPlusPlus/src/ifcpp/reader/: ReaderSTEP.cpp
